# sensor-simulator

./: .gitignore  CMakeLists.txt  README.md
config/: master_config.json  sensor_config.json
config/trajectories/: sample_trajectory.csv
include/util/: jsonUtilities.hpp
sensor_simulator/: CMakeLists.txt  package.xml
sensor_simulator/config/: sensor_config.json
sensor_simulator/config/trajectories/: sample_trajectory.csv
sensor_simulator/include/sensor_simulator/: imuSensor.hpp  looselyCoupledGpsSensor.hpp
sensor_simulator/include/sensor_simulator/util/: trajectory.hpp
sensor_simulator/src/: imuSensor.cpp  looselyCoupledGpsSensor.cpp  main.cpp
sensor_simulator/src/util/: jsonUtilities.cpp  trajectory.cpp
sensor_simulator/test/: jsonUtilitiesTest.cpp  testMain.cpp  trajectoryTest.cpp
src/: imuSensor.cpp  looselyCoupledGpsSensor.cpp  main.cpp
src/util/: jsonUtilities.cpp  trajectory.cpp
test/: jsonUtilitiesTest.cpp  trajectoryTest.cpp
test/testData/: master_config_test.json
